Assign tags and visualization

--- a/Evotech/Assets/_ExternalAssets/HexagonalGridEditor/com.HexesEditor.asmdef
+++ b/Evotech/Assets/_ExternalAssets/HexagonalGridEditor/com.HexesEditor.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "com.HexesEditor"
+    "name": "com.HexesEditor",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": true,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
