--- a/Evotech/Packages/manifest.json
+++ b/Evotech/Packages/manifest.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "com.unity.addressables": "1.21.17",
     "com.unity.collab-proxy": "2.0.5",
     "com.unity.ide.rider": "3.0.24",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.profiling.core": "1.0.2",
     "com.unity.recorder": "4.0.1",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.test-framework": "1.1.33",
