--- a/Evotech/Assets/_ExternalAssets/HexagonalGridEditor/com.HexesEditor.asmdef
+++ b/Evotech/Assets/_ExternalAssets/HexagonalGridEditor/com.HexesEditor.asmdef
@@ -2,7 +2,9 @@
     "name": "com.HexesEditor",
     "rootNamespace": "",
     "references": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": false,
